deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: homework5-deployment
spec:
    replicas: 4
    selector:
       matchLabels:
          app: homework5-app
    template:
       metadata:
          labels:
             app: homework5-app
       spec:
          containers:
          - name: app
            image: udintsev/otus-architect-homework5:0.1
            ports:
              - name: web
                containerPort: 8000
            livenessProbe:
              httpGet:
                port: 8000
                path: /
              initialDelaySeconds: 2
              periodSeconds: 5
              timeoutSeconds: 2
            readinessProbe:
              httpGet:
                port: 8000
                path: /health
              initialDelaySeconds: 2
              periodSeconds: 5
