service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homework5-service
spec:
  selector:
    app: homework5-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: web
